# sequel

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  compile_commands.json  vcpkg.json
cmake/compiler/: clang.json  gcc.json
cmake/config/: binaryDir.json  debug.json  ninja.json  release.json  vcpkg.json
cmake/platform/: x86_64-linux.json
engine/: CMakeLists.txt
engine/include/: core.h  da.h  define.h  renderer.h
engine/src/: core.c  renderer.c
sandbox/: CMakeLists.txt  main.c
